# nasa-intelligence-chat

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: evaluation_dataset.txt
docs/: architecture.md
notebooks/: 01_project_walkthrough.ipynb  02_demo.ipynb  03_evaluation_demo.ipynb
scripts/: batch_evaluate.py  build_index.py
src/nasa_rag/: __init__.py  config.py  embedding.py  evaluation.py  generation.py  retrieval.py
tests/: conftest.py  test_config.py  test_embedding.py  test_evaluation.py  test_generation.py  test_retrieval.py
